--- a/laxyam/gadyam/bANaH/kAdambarI/bhAnuchandra-TIkA_ocr/0.md
+++ b/laxyam/gadyam/bANaH/kAdambarI/bhAnuchandra-TIkA_ocr/0.md
@@ -7,7 +7,7 @@ title = "०"
 विनन्दतु नीलसरोरुहचारु पदद्वयंमुक्तिविकालनकारु ।  
 यतः किल कीलितकुण्डलिधौम ब्यभादिव मञ्जलमौक्तिकदाम ॥१॥ 
 
-'गद्यं कवीनां निकषं वदन्ति ।' को काध्यकौशलं बाधेनैव पूर्णतया परीक्ष्यत इति हि सर्वथा सत्यम् । पचं होकचरणस्यापि सौन्दर्येण संवहत्येव कामयभिख्याम् । किन्तु गद्य सर्वतः सौन्दर्य बिना निजरचयितुः प्रददाति पाण्डित्यपरिचय. मनायासादेव । किञ्च पो छन्दोबन्धानुरोधेन न स्वच्छन्दमभिसचितशब्दशय्या यथावनिर्वाहयितुं सुशका। किन्तु गधे नाऽयं प्रतिबन्धः । अत्र हि यथास्थलविनिवेशितैमौक्तिकानुकारिभिः प्रसन्नमधुरैः पदैहीर इव निजभावोद्गारः सहृदयानां हृदि सुकरतया स्थापयितुं शक्यो यदि हि काव्यसामग्रीदारियं न पुर: प्रतिबन्धकं भवति । पधे छन्दसोऽनुरोधेन कल्पनायाः शरीरं बलादेवाऽऽकुञ्चनीयं भवति । पुरः प्रदृश्य मानेऽपि हि विस्तृते कल्पनाऽङ्गणे, छन्दःप्रतिबन्धवशात्पङ्गक्रियते कविरयम् । गद्ये तु हृदयोस्थितं कल्प नोद्गारं यथामनोरथमविकृतरूपेणैव प्रकटयितुं नान्तरायः कश्चित् । __पये हि नियताक्षरबन्धेनोत्पादिता संगीतानुगामिनी कापि गतिर्निभृततरमुपादयति माधुर्य मानसे, येन हि मनागभावशैथिल्येऽपि श्लोकः श्लोकमुपयाति । गधं तु पुनरनाविष्कृतभावमाधुर्य पुर एव पिशु नयति कार्पण्यं कोः । पदान्तानुभास ('तुक' 'काफिया) सापेक्षे छन्दसि तु निबद्धार्थनि हो मल्ये न यसकस्यचित्कवेः कार्यम् । तन्न हनुमालपरवशो बलादेव स्वाभिशेतमर्थ विरूपयति, अप्रचलितशब्दब न्धेन लान्छयति वा पदबन्धमात्मीयम् । अत एवाऽक्षराणां विरूपकरणं कविसंप्रदायेनाऽप्यनुमतमेत सिन् । एवंविधे छन्दसि विवशतया विरूढेपि वैगुण्ये समालोचकपुंगवस्यापि मनो मनाङ् मार्दवमुपया त्यव । भवति च कश्चिदपदेशः कचेरपि स्वकीयामशक्तिं गोपयितुम् । किन्तु गये किञ्चिदपयवये संघटित निर्वचनमभ्युपगन्तव्या भवति स्वीयेव स्थूलता। पाशकक्रीडायां पराजितःप्रमादमात्मीयं पाशकानामुपरि लिपातयितुमासादयत्यवसरम् । परं बुद्धिबल(शतरक्ष) क्रीडायां विजितस्य का स्यादपदेशोऽन्यः ? अत एवं गधगुम्फः पूर्णपरिनिष्ठितस्यैव कवेः कार्यमित्यधिगन्तव्यं भवति । गये हि स्वच्छदर्पण इवाऽविकले प्रतिफलिता विभाति कवयितुः प्रतिभा । तत एव हि चिरात्प्रसिद्ध कविगोठ्याम्-'गां कवीनां निकर्ष वदन्ति' इति। ___ भारतीयकवीनां सर्वविदितेऽपि सामय, संस्कृतसाहित्यमिदं गद्यकाव्यैर्भूयस्तरां शून्यमिति प्रत्यक्षमी. क्ष्यतेऽस्माभिः । प्रसिद्ध्यनुसारम्-भगवतो वाल्मीकेयथैव सेयं छन्दोबन्धरीतिलौकेऽस्मिन् प्रस्ता, तथै वास्या माधुर्यप्रभावस्तथा कविषु बद्धास्पदो बभूव यथा गद्यगुस्फः शनैःशनैर्विरलतामवाप बराकः । पद्य बन्धश्चावश्यकतातोऽप्यधिकमासादयामास प्रसारम् । नाव्यम् , गीतम् धादिनम् , काव्यम् , कोषः, आयुर्वेदः, इतिहासा, पुराणम् , धर्मः, दर्शनम्, एतदादिषु सर्वत्र पद्यबन्धस्यैव प्रसारो बभूव । किं बहुना---एकमेकं च मिलित्वा द्वे भवत इति हि गणितशास्त्रमपि पद्यबद्धमेवाऽत्राविरभूत् । पद्यकविताया मादकता भारतमात्रस्य वातावरणे तथा दृढतया ध्याताऽभूद् यथा व्यतीवेऽपि बहुतिथे समये मदोऽसों 
+'गद्यं कवीनां निकषं वदन्ति ।' को काध्यकौशलं बाधेनैव पूर्णतया परीक्ष्यत इति हि सर्वथा सत्यम् । पचं होकचरणस्यापि सौन्दर्येण संवहत्येव कामयभिख्याम् । किन्तु गद्य सर्वतः सौन्दर्य बिना निजरचयितुः प्रददाति पाण्डित्यपरिचय. मनायासादेव । किञ्च पो छन्दोबन्धानुरोधेन न स्वच्छन्दमभिसचितशब्दशय्या यथावनिर्वाहयितुं सुशका। किन्तु गधे नाऽयं प्रतिबन्धः । अत्र हि यथास्थलविनिवेशितैमौक्तिकानुकारिभिः प्रसन्नमधुरैः पदैहीर इव निजभावोद्गारः सहृदयानां हृदि सुकरतया स्थापयितुं शक्यो यदि हि काव्यसामग्रीदारियं न पुरः प्रतिबन्धकं भवति । पधे छन्दसोऽनुरोधेन कल्पनायाः शरीरं बलादेवाऽऽकुञ्चनीयं भवति । पुरः प्रदृश्य मानेऽपि हि विस्तृते कल्पनाऽङ्गणे, छन्दःप्रतिबन्धवशात्पङ्गक्रियते कविरयम् । गद्ये तु हृदयोस्थितं कल्प नोद्गारं यथामनोरथमविकृतरूपेणैव प्रकटयितुं नान्तरायः कश्चित् । __पये हि नियताक्षरबन्धेनोत्पादिता संगीतानुगामिनी कापि गतिर्निभृततरमुपादयति माधुर्य मानसे, येन हि मनागभावशैथिल्येऽपि श्लोकः श्लोकमुपयाति । गधं तु पुनरनाविष्कृतभावमाधुर्य पुर एव पिशु नयति कार्पण्यं कोः । पदान्तानुभास ('तुक' 'काफिया) सापेक्षे छन्दसि तु निबद्धार्थनि हो मल्ये न यसकस्यचित्कवेः कार्यम् । तन्न हनुमालपरवशो बलादेव स्वाभिशेतमर्थ विरूपयति, अप्रचलितशब्दब न्धेन लान्छयति वा पदबन्धमात्मीयम् । अत एवाऽक्षराणां विरूपकरणं कविसंप्रदायेनाऽप्यनुमतमेत सिन् । एवंविधे छन्दसि विवशतया विरूढेपि वैगुण्ये समालोचकपुंगवस्यापि मनो मनाङ् मार्दवमुपया त्यव । भवति च कश्चिदपदेशः कचेरपि स्वकीयामशक्तिं गोपयितुम् । किन्तु गये किञ्चिदपयवये संघटित निर्वचनमभ्युपगन्तव्या भवति स्वीयेव स्थूलता। पाशकक्रीडायां पराजितःप्रमादमात्मीयं पाशकानामुपरि लिपातयितुमासादयत्यवसरम् । परं बुद्धिबल(शतरक्ष) क्रीडायां विजितस्य का स्यादपदेशोऽन्यः ? अत एवं गधगुम्फः पूर्णपरिनिष्ठितस्यैव कवेः कार्यमित्यधिगन्तव्यं भवति । गये हि स्वच्छदर्पण इवाऽविकले प्रतिफलिता विभाति कवयितुः प्रतिभा । तत एव हि चिरात्प्रसिद्ध कविगोठ्याम्-'गां कवीनां निकर्ष वदन्ति' इति। ___ भारतीयकवीनां सर्वविदितेऽपि सामय, संस्कृतसाहित्यमिदं गद्यकाव्यैर्भूयस्तरां शून्यमिति प्रत्यक्षमी. क्ष्यतेऽस्माभिः । प्रसिद्ध्यनुसारम्-भगवतो वाल्मीकेयथैव सेयं छन्दोबन्धरीतिलौकेऽस्मिन् प्रस्ता, तथै वास्या माधुर्यप्रभावस्तथा कविषु बद्धास्पदो बभूव यथा गद्यगुस्फः शनैःशनैर्विरलतामवाप बराकः । पद्य बन्धश्चावश्यकतातोऽप्यधिकमासादयामास प्रसारम् । नाव्यम् , गीतम् धादिनम् , काव्यम् , कोषः, आयुर्वेदः, इतिहासा, पुराणम् , धर्मः, दर्शनम्, एतदादिषु सर्वत्र पद्यबन्धस्यैव प्रसारो बभूव । किं बहुना---एकमेकं च मिलित्वा द्वे भवत इति हि गणितशास्त्रमपि पद्यबद्धमेवाऽत्राविरभूत् । पद्यकविताया मादकता भारतमात्रस्य वातावरणे तथा दृढतया ध्याताऽभूद् यथा व्यतीवेऽपि बहुतिथे समये मदोऽसों 
 
 NEPAL 
 
@@ -23,7 +23,7 @@ NEPAL
 
 दण्डी . कचिर्दण्डी दशकुमारचरितं नाम गद्यकाव्य निर्ममौ यद्धि सर्वत्र सुप्रसिद्ध नात्मपरिचयमपेक्षते । बाण भहस्य कादम्बा पदमाधुर्यं वर्णनाचातुर्य सत्यपि, विशेषणानां बाहुल्यात सुदीर्घदीधैर्वर्णनाऽऽटोपैः कथाशे च्याघातो भवतीति बहूनां कथनम् । दशकुमारचरिते न तथा । परमन कथानामत्यन्तमेवाधिक्यं येन हि तासां मनःस्थीकरणमत्यन्त कठिनम् । दण्डिनः पदलालित्यमपि बहूनां मते प्रसिद्धम् [एतद्विषये पर" स्तादालोच्येत] । अयं हि अनुमानतः स्त्रि. षष्ठशताब्यामजायत । 
 
-एतस्य किञ्चिदेवाऽनन्तरं सुबन्धुवासवदत्ता नाम 'कथा' निबबन्ध, या हि पदे पदे श्लेष-यमकादि भिर्विभूषिता । अन्न हि शब्दचमत्कारः कामं भवेत्परं विचारमार्मिकतायामर्थस्यौचित्यं बहुत्रैव विस्खलति । शब्दालंकारनिर्वाह निमीलितनयनो ग्रन्थकृत कथागतानामर्थानामौचित्योल्लङ्घनमपि नावेक्षते । कथापि न किञ्चित् । परस्परं स्वमे विलोकयन्तौ नायिका नायकौ मिथोऽनुरज्यतः। तदनन्तरं मिन्नसहचरो नायको sविष्यन्नायिकामवानोति। न कथायामाकर्षकं किञ्चिद्वैचित्र्यम् । एकसिन्पृष्ट एव सर्वापि कथा समापयितुं शक्यते । केवल शब्दचातुर्येणव ग्रन्थाभोग: पूरितः कविना। किन्तु नेतः पूर्वसेवंविधौलीभुक्त किछि दपि 'कथा' काव्यमासीदिति भूयसी प्रशंसा समभूत्साहिये । एतस्य समयः त्रि.षष्ठशतकादुत्तरं सप्तमश तकस्य प्रथमः पादः । यतो हि वासवदत्तावर्णने-'न्यायस्थितिमिव उद्द्योतकरस्वरूपाम् , बौद्धसंगति मिव अलंकारभूषितां.... वासवदत्तां ददर्श' इति वाक्यमुपलभ्यते । अन्न हि न्यायवार्तिककार उद्योत कराचार्यः, प्रसिद्धो बौद्धनैयायिको धर्मकीर्तिश्चापि निर्दिष्टोऽस्ति । अनयोः समयः खिष्टस्य षष्ठं शतकमेवै तिहासिकैः स्वीकृतः। अत एव सप्तमशतकस्यादिभाग एवं सुबन्धुर्जात इति सामञ्जस्येनोपपद्यते। 
+एतस्य किञ्चिदेवाऽनन्तरं सुबन्धुवासवदत्ता नाम 'कथा' निबबन्ध, या हि पदे पदे श्लेष-यमकादि भिर्विभूषिता । अन्न हि शब्दचमत्कारः कामं भवेत्परं विचारमार्मिकतायामर्थस्यौचित्यं बहुत्रैव विस्खलति । शब्दालंकारनिर्वाह निमीलितनयनो ग्रन्थकृत कथागतानामर्थानामौचित्योल्लङ्घनमपि नावेक्षते । कथापि न किञ्चित् । परस्परं स्वमे विलोकयन्तौ नायिका नायकौ मिथोऽनुरज्यतः। तदनन्तरं मिन्नसहचरो नायको sविष्यन्नायिकामवानोति। न कथायामाकर्षकं किञ्चिद्वैचित्र्यम् । एकसिन्पृष्ट एव सर्वापि कथा समापयितुं शक्यते । केवल शब्दचातुर्येणव ग्रन्थाभोगः पूरितः कविना। किन्तु नेतः पूर्वसेवंविधौलीभुक्त किछि दपि 'कथा' काव्यमासीदिति भूयसी प्रशंसा समभूत्साहिये । एतस्य समयः त्रि.षष्ठशतकादुत्तरं सप्तमश तकस्य प्रथमः पादः । यतो हि वासवदत्तावर्णने-'न्यायस्थितिमिव उद्द्योतकरस्वरूपाम् , बौद्धसंगति मिव अलंकारभूषितां.... वासवदत्तां ददर्श' इति वाक्यमुपलभ्यते । अन्न हि न्यायवार्तिककार उद्योत कराचार्यः, प्रसिद्धो बौद्धनैयायिको धर्मकीर्तिश्चापि निर्दिष्टोऽस्ति । अनयोः समयः खिष्टस्य षष्ठं शतकमेवै तिहासिकैः स्वीकृतः। अत एव सप्तमशतकस्यादिभाग एवं सुबन्धुर्जात इति सामञ्जस्येनोपपद्यते। 
 
 । 
 
@@ -40,7 +40,7 @@ NEPAL
 
 श्रीहर्पस्स राजसभायां मातङ्गदिवाकरो बाणो मयूरश्चेति प्रथिततमाः कवयो बभूवुरिति राजशेख रेणो ल्लिखितम् । बाणो मयूरकर्भगिनीपतिरासीदिति केचित् । अन्ये तु मयूरो बाणस्य श्वशुर आसीदिति वदन्ति । परं बाणमयूरी समसामयिकावित्पन्न न संदेहः । मयूरः किल सूर्यशतकस्य निर्माता, यो हि शतकेनानेन सूर्य स्तुत्वा कुष्ठरोगान्मुक्तो बभूवेति सुप्रसिद्धम् । केचिदिमामपि किंवदन्तीमाहुर्यत-मयू रवत् बाणोपि विकलाङ्गो बभूव, ततश्च चण्डीशतकेन भगवती स्तुत्वा रोगान्मुक्तिमवाप । तदिदं शतक काव्यमालागुच्छकेषु मुद्भितम् । हर्षचरितम् , कादम्बरीपूर्वार्धम्, चण्डीशतकम्, पार्वतीपरिणयनाटक चेति बाणस्य कृतिमाहुः । मुकुटताडिकापि बाणकृतेति केचित् । किन्तु नान प्रमाणमुपलब्धम् । बहवस्तु-- हर्षचरितं कादम्बरी चेलेव बाणस कृतिरित्यसाधयन् । 
 
-अतिसमर्थो बाणकविः । 'गद्य कवीनां निकष वदन्तीति यन्महत्वमारम्भप्रघट्टक एवं मया सूचितम् । यस्य च गद्यस्य वासवदत्ता कादम्बरी चेत्येव सर्वोपादेयं संस्कृतसाहित्ये काव्यदयमाहस्तयोरपि च काद म्बरी सर्वोत्तम गद्यकाव्यमिति मार्मिकाणामुक्तिः । तस्यपरीक्षका अभिप्रयन्ति यद् गद्यस्य गुम्फनपाटवं आणस्यालौकिकम् । यद्धि गचं पद्यतोपि सुमधुरम् , लोकानां हृदयाकर्षकम् , कर्णयोः संगीतस्येव सुस्वर लहरीप्रस्तावकं च स्यादेचंविधस्य जन्मदाता बाणमन्तरा नान्यः कश्चन सफलो दृष्टः । दण्डिनो लेखानु सारम् ----कथायामोजाप्राधान्यस्पर्शपि बाणः कादम्बयों वण्यमानरसानुरोधेन पाञ्चालीरीति सुमधुरतया निरुवाह । वर्णानां गुम्फो मौक्तिकगुम्फमपि भृशमतिशेते-कमलिनीपलाशानि जललवलाग्छितान्या दाय, गर्भधूलिकषायपरिमलमनोहराणि च कुसुदकुवलयकमलानि गृहीत्वाऽऽगत्य तस्मिन्नेव लतागृह शि लातले शयनमस्याकल्पयम् ।' इत्यादिभिरेवाक्षरैः को वाऽपरः संपूर्ण प्रकरणं समापयितुं शक्नुयात् ? । अत एव साक्षात्सरस्वतीरूपोऽयमिति प्रशशंसुओमिका:--'जाता शिखण्डिनी प्राक् यथा शिखण्डी तथाऽवगच्छामि । प्रागल्भ्यमधिकमातुं वाणी बाणो बभूवेति ॥' बाणपरितस्य प्रत्येकपात्रस्य चरि त्रचित्रणमतिस्वाभाविक कथारसानुरूपं च । चातुर्यपूर्वकमालोचनेऽस्य पात्राणां प्रत्यके चरिनं परस्परं पृथ कूप्रकारकमपि अकृत्रिमं सुस्वाभाविकम् । नामान्यप्यनुकूलानि--सेनापतिवीरतोचितों मेघनादः । ब्राह्मणो मन्त्री शुकनासस्तत्पुन्नो वैशम्पायन:, पत्नी मनोरमा । तस्य चरित्रमाने महानादरः । पुनोत्पत्ती स्वयं राजा पूर्णपानमाहरति । युवराजश्चन्द्रापीडः पितरसिव समभ्युत्तिष्ठति । तेनौचित्याहत्तासनोपि तत्स 
+अतिसमर्थो बाणकविः । 'गद्य कवीनां निकष वदन्तीति यन्महत्वमारम्भप्रघट्टक एवं मया सूचितम् । यस्य च गद्यस्य वासवदत्ता कादम्बरी चेत्येव सर्वोपादेयं संस्कृतसाहित्ये काव्यदयमाहस्तयोरपि च काद म्बरी सर्वोत्तम गद्यकाव्यमिति मार्मिकाणामुक्तिः । तस्यपरीक्षका अभिप्रयन्ति यद् गद्यस्य गुम्फनपाटवं आणस्यालौकिकम् । यद्धि गचं पद्यतोपि सुमधुरम् , लोकानां हृदयाकर्षकम् , कर्णयोः संगीतस्येव सुस्वर लहरीप्रस्तावकं च स्यादेचंविधस्य जन्मदाता बाणमन्तरा नान्यः कश्चन सफलो दृष्टः । दण्डिनो लेखानु सारम् ----कथायामोजाप्राधान्यस्पर्शपि बाणः कादम्बयों वण्यमानरसानुरोधेन पाञ्चालीरीति सुमधुरतया निरुवाह । वर्णानां गुम्फो मौक्तिकगुम्फमपि भृशमतिशेते-कमलिनीपलाशानि जललवलाग्छितान्या दाय, गर्भधूलिकषायपरिमलमनोहराणि च कुसुदकुवलयकमलानि गृहीत्वाऽऽगत्य तस्मिन्नेव लतागृह शि लातले शयनमस्याकल्पयम् ।' इत्यादिभिरेवाक्षरैः को वाऽपरः संपूर्ण प्रकरणं समापयितुं शक्नुयात् ? । अत एव साक्षात्सरस्वतीरूपोऽयमिति प्रशशंसुओमिकाः--'जाता शिखण्डिनी प्राक् यथा शिखण्डी तथाऽवगच्छामि । प्रागल्भ्यमधिकमातुं वाणी बाणो बभूवेति ॥' बाणपरितस्य प्रत्येकपात्रस्य चरि त्रचित्रणमतिस्वाभाविक कथारसानुरूपं च । चातुर्यपूर्वकमालोचनेऽस्य पात्राणां प्रत्यके चरिनं परस्परं पृथ कूप्रकारकमपि अकृत्रिमं सुस्वाभाविकम् । नामान्यप्यनुकूलानि--सेनापतिवीरतोचितों मेघनादः । ब्राह्मणो मन्त्री शुकनासस्तत्पुन्नो वैशम्पायनः, पत्नी मनोरमा । तस्य चरित्रमाने महानादरः । पुनोत्पत्ती स्वयं राजा पूर्णपानमाहरति । युवराजश्चन्द्रापीडः पितरसिव समभ्युत्तिष्ठति । तेनौचित्याहत्तासनोपि तत्स 
 
 
 १ शब्दार्थयोः समो गुम्फः पाञ्चाली रीतिरिष्यते । शीलाभट्टारिकावाचि बाणोक्तिषु च सा यदि ॥ (सरस्वतीक ठाभरणम् । 
@@ -65,11 +65,11 @@ NEPAL
 
 किञ्च इथताम्--एकमात्रं पश्यं यथा रसस्य कस्यचित्प्रकटनाय प्रभवति तथा गद्यस्य एकमानं वाक्यं रसस्य परिपोषे प्रभवेदिति न यत्रकुन्नचिदृश्येत । बाणस्यैव लेखनी तदेतस्मिन्प्रकर्षे प्रभवति । विन्ध्या टच्यामगस्त्याश्रमवर्णने आह-'अधुनापि यत्र जलघरसमये गम्भीरमभिनवजलधरनिवहलिनादमाकण्य भगवतो रामस्य त्रिभुवन विवरव्यापिनश्चापघोषस्य सरन्तो न गृह्णन्ति शष्पकवलमजनमश्रुजललवलुलि तदृष्टयो वीक्ष्य शून्या दश दिशो जराजर्जरितविषाणकोटयो जानकीसंवर्धिता जीर्णमृगाः, । (पृ. ४६) अनेन हि कारुण्याई हृदयं भवति न वेति कश्चित्सहृदयः पृच्छयताम् । 'जललवलुलितदृष्टयो वीक्ष्य शून्या दश दिशः' इत्यनेन मृगाणां कीदृशं प्रत्यक्ष प्रणयदैन्यं चिनितम् ? .. 
 
-.. अन्यदण्यालोक्यताम्-'तातस्तु तं महान्तमकाण्ड एव प्राणहरमप्रतीकारमुपप्लवमुपनतमालोक्य द्विगुणतरोपजातवेपथुमरणभयादुद्रान्ततरलतारको विषादशून्यामश्रुजलालुता दशमितस्ततो दिक्षु विक्षि पन् , उच्छुष्कतालुरात्मप्रतीकाराऽक्षमस्वासस्नस्तसंधिशिथिलेन पक्षसंयुटेनाच्छाथ मां तत्कालोचितं प्रती कारं मन्यमानः, स्नेहपरवशो मदक्षणाकुल: किंकर्तव्यताविमूढः क्रोडविभागेन मामवष्टभ्य तस्थौ ।' (पृ. ७२) अत्र हिंमुमूर्षतो जराजीर्णस्य शुका निजशावकोपरि फीडशमसामान्य वात्सल्यमतितम् । 
+.. अन्यदण्यालोक्यताम्-'तातस्तु तं महान्तमकाण्ड एव प्राणहरमप्रतीकारमुपप्लवमुपनतमालोक्य द्विगुणतरोपजातवेपथुमरणभयादुद्रान्ततरलतारको विषादशून्यामश्रुजलालुता दशमितस्ततो दिक्षु विक्षि पन् , उच्छुष्कतालुरात्मप्रतीकाराऽक्षमस्वासस्नस्तसंधिशिथिलेन पक्षसंयुटेनाच्छाथ मां तत्कालोचितं प्रती कारं मन्यमानः, स्नेहपरवशो मदक्षणाकुलः किंकर्तव्यताविमूढः क्रोडविभागेन मामवष्टभ्य तस्थौ ।' (पृ. ७२) अत्र हिंमुमूर्षतो जराजीर्णस्य शुका निजशावकोपरि फीडशमसामान्य वात्सल्यमतितम् । 
 
 हास्यरसस्थाऽवतारणं यथा जरद्रविडभार्मिकवर्णने-'असकृदभिमन्त्रितसिद्धार्थकाहतिधावितैः पिला चगृहीतकैः करतलताडननिबिडीकृतश्श्रवणनासापुटेन [पिशाचाविष्टानामुपरि अभिमन्त्रितान् सर्षपान्यथै बायं विकिरति तथैवैते धावित्वाऽस्य श्रवणयोनासिकायां च चपेटां प्रददति येन चिपिटीकृतश्रवणनासि कोऽयम् ], दिवसमेब मशककणितानुकारि किमपि कम्पितोत्तमागायता, गृहीततुरगब्रह्मचर्यतयाऽन्य.. देशागतोषितासु जरत्प्रवजितासु बहुकृत्वः संप्रयुक्तस्त्रीवशीकरणचूर्णेन [अनेन घोटकवत् प्रतिबन्धवशा देव ब्रह्मचर्य गृहीतं न तु वास्तवम् । अत एव याः प्रदेशागता जरत्संन्यासिन्यस्तदुर्गामन्दिरे रात्रौ निवसन्ति तदुपरि जरद्रविडधासिकमहाभागा वशीकरणचूर्णस्य प्रयोग करोति!1, असकृत्सब देवमान तृगृहवास्यूक्षनखजर्जरितकपोलेन [अलीककामुकत्वाभिनयवशात् अभिसारलीलया आरण्यकेषु निर्जन भनदेवगृहेषु महाभागोऽयं प्रविशति यत्र हि तद्गृहवासिभिः शतशोऽयं जर्जरितकपोलो जाता, शतशः श्रीफलतरुशिखरच्युतिचूर्णितोत्तमा न [लोलुपतया बिल्वफलाहरणाय सदृक्षमारोहति। चापल्-वशाच ततोप्यधोमुखः पतति येन निकेशतया चमत्कुर्वन्मस्तकमस्य चूर्णीभवति], ...जरगविडधार्मि केणाधिष्ठितां चण्डिकामपश्यत् ।' (पृ. ४६१-६३) __ यस्मादियं किंवदन्ती ('दण्डिनः पदलालित्यम्')लोके प्राचरत् , मूलप्रस्रवणभूतस्य तस्य पधस्योप यपि किञ्चिदालोचनाहग् दीयते । पद्यं हि-'उपमा कालिदासस्य भारवेरर्थगौरवम् । दण्डिनः पदला. लित्यं माघे सन्ति त्रयो गुणाः ॥' इति । अवश्यं महाकवेः कालिदासस्य विषये यदुच्येत तब्यूनम् । सिद्ध सारस्वतवैभवो महाकविचूडामणिः कालिदासो ह्यनिर्वचनीयेन काव्यगुणगौरवेण गरिष्ठः । अर्थगाम्भीर्य पदलालित्यं प्रौढि रित्यादिः सर्वोप्यभिनन्दनीयः काव्यगुणगणस्तस्मिन्वर्तत इत्युपमापि तस्याऽन्यकविभ्योऽ तिशायिनीति न कस्यचिद्विमतिः। प्रतिपदमुपलभ्यते हि तादृशमेवोपमासामञ्जस्यम् । भारवेरथगौरवमपि 'स्थादेतत्' इति भङ्गया तावत्स्वीकुर्मः। समयान्तरेऽस्य विचारः प्रस्तूयेत । किन्तु 'माघे सन्ति यो 
 
-गुणाः' इति यचतुर्थ चरणं तन्त्र मन्ये बहूनामेव मार्मिकाणां विचार: प्रसज्येत । 
+गुणाः' इति यचतुर्थ चरणं तन्त्र मन्ये बहूनामेव मार्मिकाणां विचारः प्रसज्येत । 
 
 माघस्य सुन्दर शिशुपालवधम् । 'नवसर्ग गते माघे नवशब्दो न विद्यते इति किंवदन्त्यनुसारमपि शब्दगुम्फे प्रौढाऽस्य लेखनी। अलंकारादिविन्यासेन शब्दार्थयोश्चमत्कारोऽपि स्थाने स्थानेऽभिनन्दनीय एव । किन्तु कालिदासस्य पाटवमेकदेशि, यतो हि स उपमाप्रयोगे एव सिद्धहस्तः । भारविरथंगाम्भीर्य गवेषणायामेव, दण्डी पदलालित्य एव, इति सर्वेप्येकैकदेशिकाव्यसौष्ठवे पटिष्ठाः। परं माधः सर्वैरप्ये तैर्गुणैर्युक्त इति सार्वदेशिककाव्यसौन्दयेणाभिनन्दनीय इति यदि पद्यस्यास्य तात्पर्य तर्हि मन्ये स्पष्टमेव सर्वेषां प्रतीयेत यन्माघस्यातिभक्तिसूचकः प्ररोचनापरोऽयमर्थवाद एव । यतो हि कालिदासतुलनायामपि सर्वथोत्कृष्टो माधः? यतो हि यदर्थ कालिदासस्य प्रशंसा कविसमाजे प्रसका तदेतत् उपमाप्रयोगपाट बम्, तत्त्वस्त्येव माघे। तदधिको गुणस्त्वयं यत्कालिदासः केवलमपमापटिष्ठ एव, अयं तु अर्थगाम्भी र्यपदलालियादिगुणैरप्यभ्यर्हितः । एवं सति कालिदासापेक्षयापि काव्यसौष्ठवसामग्रीसमृद्धत्वं मावस्य, मार्मिक विचारसापेक्षं सिध्येत् । 
 
@@ -94,7 +94,7 @@ NEPAL
 
 'केवलोपि स्फुरन् बाणः करोति विमदान्कवीन् । 
 
-किं पुनः क्लप्तसंधान:पुलिन्दकृतसंनिधिः॥ (धनपालस्य तिलकमलरी) . अन्ये 'पुलिनः' इति नाम निरदिशन् । केषांचन मतेन 'निचुलः' इत्यपि नामधेयम् । एतदपि कथा अन्तः केचन श्रुता यत्--- 
+किं पुनः क्लप्तसंधानःपुलिन्दकृतसंनिधिः॥ (धनपालस्य तिलकमलरी) . अन्ये 'पुलिनः' इति नाम निरदिशन् । केषांचन मतेन 'निचुलः' इत्यपि नामधेयम् । एतदपि कथा अन्तः केचन श्रुता यत्--- 
 
 स्थानादसात्सरसनिचुलादुत्पतोदङ्मुखः खं 
 
@@ -108,7 +108,7 @@ NEPAL
 
 वर्तमानकालिकाः 'उपन्यास'कारा घटनावैचित्र्यस्याभिमानमावहन्ति । किन्तु कादम्बरीकथायां घट नागतं तादृशमाश्चर्य यस्य हि पूर्वापरसंघटनपूर्वकं मार्मिकतयाऽऽलोचने कृते संघटन चतुरस्यापि चेतश्चि श्रीयेत । यः शुको यश्च शूद्रकः कथायाः प्रारम्भिके दृश्येऽस्मसंमुखमायाति, एतदेव दृश्यमन्तिमतया परिणमति । शुकपक्षरमादाय या 'चाण्डालदारिका' राजसभी प्रविशति तस्या वर्णने-'किरातवेषामिव भवानीम्, नारायणदेहप्रभाश्यामलितामिव श्रियम्, रुधिररक्तचरणा मिव कात्यायनीम्' इत्यादीनि पूज्य. देवतासाम्यसूचकानि चाण्डालकन्यकाविशेषणानि हृदये किञ्चिदाश्चर्यम् , कवीनां निरङ्कुशतां च निर्विश कमरयन्ति । किन्तु सत्यमेव सा अन्ते लक्ष्मीः परिणमति ! कि वर्तमानकालिकोपन्यासघटनातो न्यून मिदम् । एवंकथानिर्माणपाटवेऽपि कवयितुर्विनयः पितृभक्तिश्च किञ्चिदालोच्यतां यत् कृतिसमाप्तौ स्वस्य मामपर्यन्तमपि न निर्दिष्टम् । 'बाणतनयः' इति संकेतेनैव स्वपरिचयो दत्तः । 
 
-बाणस्य वंशश्चरित्रं च - कान्यकुशप्रदेशे शोणनंदस्य पश्चिमतटे प्रीतिकूटनामा प्रामो बाणभट्टस्य पारम्परिको वासः । वास्थ गोत्रजातो वैदिकक्रियाकुशलो वैदिकप्रवरः कुबेरनामा पण्डितः सर्वतः पूर्वमिमं प्राममध्यवात्सीत् । तस्य पुत्रः पाशुपतः, तत्तनयश्चार्थपतिरासीत् । अर्थपतेरेकादश पुत्रा अभूवन् । तेषामष्टमाचित्रभानो राजद्रे व्यभिधानायां भार्यायाममाकं चरितनायकस महाकविशिरोमणे: श्रीमतो बाणस्य जन्माऽभवत् । बाणस्य जननी शैशव एव परलोकमगात् । चित्रभानुरेव तनयं बाणं मातृवत्परमप्रेम्णां परिपोषयन् , उपा घ्यायचदावश्यकं पाख्यजातं शिक्षयन्, पौगपडं प्रापयामास । यथाविधिसंस्कारोसरं बाणस्य चतुर्दशे 'वर्षे चित्रभानुर्लोकान्तरमगात् । यौवनसमये संगदोषेण बाणस्य चरिने स्वातन्त्र्यमधिकमुदियाय । एतस्य ये ये सहचराःसमभवम् तेषां नाम-परिचयादिकं पूर्व सूचितवानसि । तैः साकं स्वदेशानिर्गतोऽयं नाना विधान्देशान्पर्यटन , बहूनां नरपालानां सभामुपतिष्ठमानः, नानाविधैः पण्डितैश्च सह सख्यं च संवादं 
+बाणस्य वंशश्चरित्रं च - कान्यकुशप्रदेशे शोणनंदस्य पश्चिमतटे प्रीतिकूटनामा प्रामो बाणभट्टस्य पारम्परिको वासः । वास्थ गोत्रजातो वैदिकक्रियाकुशलो वैदिकप्रवरः कुबेरनामा पण्डितः सर्वतः पूर्वमिमं प्राममध्यवात्सीत् । तस्य पुत्रः पाशुपतः, तत्तनयश्चार्थपतिरासीत् । अर्थपतेरेकादश पुत्रा अभूवन् । तेषामष्टमाचित्रभानो राजद्रे व्यभिधानायां भार्यायाममाकं चरितनायकस महाकविशिरोमणेः श्रीमतो बाणस्य जन्माऽभवत् । बाणस्य जननी शैशव एव परलोकमगात् । चित्रभानुरेव तनयं बाणं मातृवत्परमप्रेम्णां परिपोषयन् , उपा घ्यायचदावश्यकं पाख्यजातं शिक्षयन्, पौगपडं प्रापयामास । यथाविधिसंस्कारोसरं बाणस्य चतुर्दशे 'वर्षे चित्रभानुर्लोकान्तरमगात् । यौवनसमये संगदोषेण बाणस्य चरिने स्वातन्त्र्यमधिकमुदियाय । एतस्य ये ये सहचराःसमभवम् तेषां नाम-परिचयादिकं पूर्व सूचितवानसि । तैः साकं स्वदेशानिर्गतोऽयं नाना विधान्देशान्पर्यटन , बहूनां नरपालानां सभामुपतिष्ठमानः, नानाविधैः पण्डितैश्च सह सख्यं च संवादं 
 
 च संबननयं बहुतरमेवानुभवं ज्ञानं चोपार्जयामास । 
 
@@ -153,7 +153,7 @@ ___ अध्युतः
 
 . .. भूषणभट्टः 
 
-बाणसमये सामाजिकी परिस्थितिः तमिन्समये वेषविन्यासो विचित्र एवं प्राप्यते । राज्ञः शूद्रकस्य वर्णनेन ज्ञायेत यद् राजापि केवल विसंस्थुलपाय श्वेतवस्त्रं शिरसि घेष्टयति । अङ्गे च केवलमुत्तरीयं स्कन्धयोहति । यतो बङ्गरागः शरीरे विलिप्यमानः स्फुटमवभासते । सर्धेषामेव पात्राणां वर्णने भङ्गरागस्य सुमहबाहुल्यम्, बस्त्रस्य च वैर व्यम् । कादम्बरीप्रेरितः केयूरकनामा वीणावाहकः केवळमधोवसमेव धारयति, नोत्तरीयमपि-अधर वास एव केवलं वसानेन... (पृ. १७४) 
+बाणसमये सामाजिकी परिस्थितिः तमिन्समये वेषविन्यासो विचित्र एवं प्राप्यते । राज्ञः शूद्रकस्य वर्णनेन ज्ञायेत यद् राजापि केवल विसंस्थुलपाय श्वेतवस्त्रं शिरसि घेष्टयति । अङ्गे च केवलमुत्तरीयं स्कन्धयोहति । यतो बङ्गरागः शरीरे विलिप्यमानः स्फुटमवभासते । सर्धेषामेव पात्राणां वर्णने भङ्गरागस्य सुमहबाहुल्यम्, बस्त्रस्य च वैर व्यम् । कादम्बरीप्रेरितः केयूरकनामा वीणावाहकः केवलमधोवसमेव धारयति, नोत्तरीयमपि-अधर वास एव केवलं वसानेन... (पृ. १७४) 
 
 थेषविन्यासादिषु वैचित्र्येऽपि बयः सामाजिकप्रथा वर्तमानकाल इव तदाऽप्यासन् । होलिकायां नानोपद्वाः, विरूपरूपक (स्वाँग)निःसारणादिप्रथा यथा साम्प्रतमति तथा बाणसमयेऽप्यासीदिति चित्रम् । द्रविडधार्मिकपरिचये यथा-'सर्वदा वसन्तक्रीडिना जनेनोक्षिसखण्डखदारोपितवृद्धदासीवि वाहप्रासविडम्बनेन (पृ. ४६३). 
 
@@ -225,7 +225,7 @@ S
 
 बाणोऽप्यसिन्विषये न कसाचित्महीणः । कादम्बर्याः शीतोपचाराय मौक्तिकानि संचूर्य प्रतिक्षणं जलं विकिरता यन्नवृक्षाणामालवाला विरचिताः । हरिचन्दनद्रवस्य दीर्घिकाः पूरिताः । गन्धोदकपूरितेपु कूपेषु घटीयत्राणि (मरहट) तादृशानि कृतानि यन्त्र केतकपत्रमयानि पुटकान्येव जलाधारपात्राणि । कुवलयावलीनां रज्जुः' इत्यादि (पृ. १३९)। कादम्बरी गन्धर्वराजपुत्री । अत एव दिव्यमिदं वैभवं संभवेत् । किन्तूजयिनीराजभवनेपि निष्कुटेषु मणिभिः क्रीडापर्वता एव निर्मिताः । येषां मणिशिलासु अबलानां चरणालतकैरद्धव शोभा भवति । जालवातायनविवरेभ्यो महायरल किरणास्तथा निष्पतन्ति बे मणिखचितकनकशृङ्खला इव बहिनिःसरन्तः प्रतीयन्ते (पृ. १९०)। 
 
-एतत्सर्व धनसमृद्धिप्राचुर्यम् । प्राकृतशोभाप्राचुर्यमपि समृद्धिशालिषु भूपभवनेष्वत्सद्भुतमेव । गृहो. थानेषु चकोरकादम्बहारीतादयस्तु वृक्षेषु बिहरन्तः शोभन्त एव । किन्तु कस्तूरिकाकुरङ्गा अपि तत्रेत स्ततः संचरन्ति । ते च नैकद्धाः, अपि तु अपरिमिताः, गृहवासिनां च परिचिताः । येषां नाभिपरिमळेन दिकमुखान्येव सुरभित्तानि भवन्ति (पृ. १९५) । कस्तूरिकामृगो न यत्रकुत्रचित्स्थातुं शक्नोति । हिमा लपस्य हिमाच्छादितस्थलेष्वेव स प्रकृतिनियमतः प्राप्यते इत्यभिज्ञा वदन्ति । किन्तु कविप्रतिभा तमपि राजभवने निगडयामास । ...समृदिमिव राज्ञां संमानमध्यसामान्य कविरेष चित्रयामास । न केवलमाश्रिता एव, अपि तु मूर्दा भिषिका राजानोपि तारापीडस्य चरणो मौलिमालाभिरुपरजयन्ति । राजकीयपुरुषं दृष्टैव सर्वे ससंमान. मभिगच्छन्ति । राजा, राजसचिवादयोऽपि राजधर्म परिनिष्ठिताः, सब्यवहारिणः । अतीवनम्रा उपचार चतुराश्च । राजकुमारश्चन्द्रापीडोऽप्युपचारस्य चरमसीमानं स्पृशति । 'चरणरजोरूपाः दासानुदासावय'मि त्यादीनि विनम्रवचनानि प्रसिद्धान्येव । यवनभाषापटवोपि 'खाकसार' इत्यात्मानं व्यपदिशन्तो विनयाति कायमसामान्यमभिनयन्ति । किन्तु बाणेन तत्सीमाप्यतिललिता । चन्द्रापीडः स्वविनयमभिग्यनकि 
+एतत्सर्व धनसमृद्धिप्राचुर्यम् । प्राकृतशोभाप्राचुर्यमपि समृद्धिशालिषु भूपभवनेष्वत्सद्भुतमेव । गृहो. थानेषु चकोरकादम्बहारीतादयस्तु वृक्षेषु बिहरन्तः शोभन्त एव । किन्तु कस्तूरिकाकुरङ्गा अपि तत्रेत स्ततः संचरन्ति । ते च नैकद्धाः, अपि तु अपरिमिताः, गृहवासिनां च परिचिताः । येषां नाभिपरिमलेन दिकमुखान्येव सुरभित्तानि भवन्ति (पृ. १९५) । कस्तूरिकामृगो न यत्रकुत्रचित्स्थातुं शक्नोति । हिमा लपस्य हिमाच्छादितस्थलेष्वेव स प्रकृतिनियमतः प्राप्यते इत्यभिज्ञा वदन्ति । किन्तु कविप्रतिभा तमपि राजभवने निगडयामास । ...समृदिमिव राज्ञां संमानमध्यसामान्य कविरेष चित्रयामास । न केवलमाश्रिता एव, अपि तु मूर्दा भिषिका राजानोपि तारापीडस्य चरणो मौलिमालाभिरुपरजयन्ति । राजकीयपुरुषं दृष्टैव सर्वे ससंमान. मभिगच्छन्ति । राजा, राजसचिवादयोऽपि राजधर्म परिनिष्ठिताः, सब्यवहारिणः । अतीवनम्रा उपचार चतुराश्च । राजकुमारश्चन्द्रापीडोऽप्युपचारस्य चरमसीमानं स्पृशति । 'चरणरजोरूपाः दासानुदासावय'मि त्यादीनि विनम्रवचनानि प्रसिद्धान्येव । यवनभाषापटवोपि 'खाकसार' इत्यात्मानं व्यपदिशन्तो विनयाति कायमसामान्यमभिनयन्ति । किन्तु बाणेन तत्सीमाप्यतिललिता । चन्द्रापीडः स्वविनयमभिग्यनकि 
 
 क्षसजनकथाकीर्तनेषु सर्तव्यः खलु चन्द्रापीडचण्डालः । [पृ. ४५२] । 
 
@@ -299,7 +299,7 @@ M
 
 हारीतः पौलस्त्यः 
 
-जाबालि: .. रखाकरं पुरम् : ..... 
+जाबालिः .. रखाकरं पुरम् : ..... 
 
 उज्जयिनी नगरी ... ज्योतिष्प्रभः 
 
@@ -307,13 +307,13 @@ M
 
 विलासवती . सोमप्रभः 
 
-चन्द्रापीड: प्रभाकरः 
+चन्द्रापीडः प्रभाकरः 
 
 शुकनासा प्रियङ्करः. 
 
 वैशम्पायनः आशुश्रवाः (उच्चैःश्रवसः पुत्रः) 
 
-इन्द्रायुधः पाकूट: 
+इन्द्रायुधः पाकूटः 
 
 हंसः हेमप्रभा : 
 
@@ -480,7 +480,7 @@ A
 
 यालिङ्गनान्' 'दन्तक्षतान्' 'कर्णावतंसानि' 'त्यज्यमानासु सत्सु, श्वेतायमानासु सत्सु' (पू. ५४७)। ध्वनिशब्दस्य, 'रक्तिमा' इत्यादिइमनिच्प्रत्ययान्तानां च प्रायः स्त्रीत्वमेव प्रयुक्तम् । 'पुस्तकान शास्त्रान्' (२०५)। 'अप्रापम् , अप्रार्थयत,' इत्याद्यपि बहुत्र । शिष्या इत्यस्य लोकोत्तरा व्याख्या 'शिष्यिणी' इति (पृ. २२०) । 'पराभवितस्य' 'रुदनम्' (पृ. ६८२) 'कार्यताम्' इत्येतस्य व्याख्या 'काराय्यताम् इत्यादि ('कराइये' इति 'हिन्दी दृष्ट्वा') (पृ. ६६३) 
 
-अलौकिक व्याख्यानपाण्डित्यं तु स्थाने स्थाने, यस्य शोधन 'चषक टिप्पण्या कर्तुमाचेष्टितम् । इह तस्योल्लेखे मुधैव भूमिकाकायवृद्धिः स्यात् । यथा.'दिग्विजयमालध्वजेन,......त्रिभुवनमलङ्घयत रजसा' अर्थात् सैन्यसंघर्षोत्थं रजश्चन्द्रापीडकृतदिग्विजय मालध्वजः (माङ्गलिककेतुदण्डस्वरूपः)। ध्वजवदुस्थानसादृश्यात् रजसि धनजस्वरूपणम् । टीकाकारमहाभागो व्याचष्टे-'दिशां ककुभां यो विजयः तत्र यन्मङ्गलं विघ्ननिवारकदधिदूर्वादिः तस्य ध्वजेन केतुना' (पृ. २४९)। (इयं लक्ष्मीः ) पुस्तम स्यापि (अचेतनपुत्तलिकारूपापि) इन्द्रजालमाचरति [अकस्मात् लक्ष्म्या विलोपात्] । 'पुस्त'पदस्य पुत्तलिकार्थे प्रयोगो यथा---'पुस्तस्त्रीहस्तनियंत्' इत्यादि वाग्भटे । टीकाकारो व्याख्याति-'पुस्तक मस्यापि ज्ञानमय्यपि' । निन्दो कुर्वाणस्य ज्ञानमयीति निर्देशः कियत्स्वाभाविक इति न विचारितं वराकेण (पृ. २२९) । 'अपि च अनेन (कामेन) अधिष्ठितानां चिन्तया (चिन्तावशात) प्रियमुखचन्द्रसह खाणि पश्यन्तीनां कामिनीनां कृते संकटमम्बरतलम् (मुखचन्द्रसहस्रसंकीर्णतया) संबाधं भवति । 'लिखन्तीनां दयिताकारानविस्तीर्ण महीमण्डलम्, [अनेनाधिष्ठितानाम् अत एव विनोदार्थ दयितस्य प्रतिकृतीलिखन्तीनां (कामिनीनां हृदये)महीमण्डलमविशालम्, यतो हि तञ्चित्रिता दयिताकारास्तन्त्र न मान्ति ] । 'बल्लभगुणान् गणयन्तीनामल्पीयसी संख्या' (गुणगणनाकाले परार्धान्तापि संख्या अप याता भवतीत्यर्थः)। शुण्यतीनां प्रियतमकथामबहुभाषिणी सरस्वती' (प्रियकथां शृण्वतीनां कृते वाग्देवतास्वेन प्रसिद्धापि सरस्वती न्यूनभाषिणी । अनन्तयापि कथया तासां श्रवणेच्छान पूर्यत इत्यर्थः)। 'ध्यायन्तीनां प्राणसमसमागमसुखानि हसीयान् कालो हृदयस्थापतति' [ध्यानवेलायां कालः सहसैव समाप्यत इत्यर्थः ] । टीकाकारमहाशयो व्याख्याति-अनेन कन्दर्पणाधिष्ठितानाम् आश्रितानां कामि नीनां हृदयस्य इसीयान हासकृत्काल आपतति, भकलादागच्छति [भयं महाभागः हसीयान काल इति सर्ववाक्येषु योजयति] | 'अथ कामिनीनां विशेषणानि-किं कुर्वन्तीनाम् । चिन्ताजमितं यत्प्रिय मुखसहस्रं तेन संकटं संकीर्ण यदम्बरतलं तत्पश्यन्तीनां त्रिलोकयन्तीनाम् ००' इत्यादि । (पृ. ४७७)। 
+अलौकिक व्याख्यानपाण्डित्यं तु स्थाने स्थाने, यस्य शोधन 'चषक टिप्पण्या कर्तुमाचेष्टितम् । इह तस्योल्लेखे मुधैव भूमिकाकायवृद्धिः स्यात् । यथा.'दिग्विजयमालध्वजेन,......त्रिभुवनमलङ्घयत रजसा' अर्थात् सैन्यसंघर्षोत्थं रजश्चन्द्रापीडकृतदिग्विजय मालध्वजः (माङ्गलिककेतुदण्डस्वरूपः)। ध्वजवदुस्थानसादृश्यात् रजसि धनजस्वरूपणम् । टीकाकारमहाभागो व्याचष्टे-'दिशां ककुभां यो विजयः तत्र यन्मङ्गलं विघ्ननिवारकदधिदूर्वादिः तस्य ध्वजेन केतुना' (पृ. २४९)। (इयं लक्ष्मीः ) पुस्तम स्यापि (अचेतनपुत्तलिकारूपापि) इन्द्रजालमाचरति [अकस्मात् लक्ष्म्या विलोपात्] । 'पुस्त'पदस्य पुत्तलिकार्थे प्रयोगो यथा---'पुस्तस्त्रीहस्तनियंत्' इत्यादि वाग्भटे । टीकाकारो व्याख्याति-'पुस्तक मस्यापि ज्ञानमय्यपि' । निन्दो कुर्वाणस्य ज्ञानमयीति निर्देशः कियत्स्वाभाविक इति न विचारितं वराकेण (पृ. २२९) । 'अपि च अनेन (कामेन) अधिष्ठितानां चिन्तया (चिन्तावशात) प्रियमुखचन्द्रसह खाणि पश्यन्तीनां कामिनीनां कृते संकटमम्बरतलम् (मुखचन्द्रसहस्रसंकीर्णतया) संबाधं भवति । 'लिखन्तीनां दयिताकारानविस्तीर्ण महीमण्डलम्, [अनेनाधिष्ठितानाम् अत एव विनोदार्थ दयितस्य प्रतिकृतीलिखन्तीनां (कामिनीनां हृदये)महीमण्डलमविशालम्, यतो हि तञ्चित्रिता दयिताकारास्तन्त्र न मान्ति ] । 'बल्लभगुणान् गणयन्तीनामल्पीयसी संख्या' (गुणगणनाकाले परार्धान्तापि संख्या अप याता भवतीत्यर्थः)। शुण्यतीनां प्रियतमकथामबहुभाषिणी सरस्वती' (प्रियकथां शृण्वतीनां कृते वाग्देवतास्वेन प्रसिद्धापि सरस्वती न्यूनभाषिणी । अनन्तयापि कथया तासां श्रवणेच्छान पूर्यत इत्यर्थः)। 'ध्यायन्तीनां प्राणसमसमागमसुखानि हसीयान् कालो हृदयस्थापतति' [ध्यानवेलायां कालः सहसैव समाप्यत इत्यर्थः ] । टीकाकारमहाशयो व्याख्याति-अनेन कन्दर्पणाधिष्ठितानाम् आश्रितानां कामि नीनां हृदयस्य इसीयान हासकृत्काल आपतति, भकलादागच्छति [भयं महाभागः हसीयान काल इति सर्ववाक्येषु योजयति] । 'अथ कामिनीनां विशेषणानि-किं कुर्वन्तीनाम् । चिन्ताजमितं यत्प्रिय मुखसहस्रं तेन संकटं संकीर्ण यदम्बरतलं तत्पश्यन्तीनां त्रिलोकयन्तीनाम् ००' इत्यादि । (पृ. ४७७)। 
 
 ....- 
 
@@ -596,7 +596,7 @@ divakdilinesamshelternkatha Aiyaayaawaramseerapyehirygvi am
 
 : 
 
-__. मकरसंक्रान्ति: १९९६ 
+__. मकरसंक्रान्तिः १९९६ 
 
 - जयपुर 
 
@@ -649,7 +649,7 @@ __. मकरसंक्रान्ति: १९९६
 "अवन्तिदेशे उज्जयिन्यां राजधान्यां महाप्रतापस्तारापीडो नाम राजासीत् , यस्य महिषी विलासवती । निखिलगुणाकरो मन्त्री तु तस्य शुकनासाख्योभूत् यस्य पत्नी मनोरमा । निःसंता नतया परमविषण्णा विलासवती यावदपत्यार्थं व्रतादिकमाचरति तावदकस्मादेकदा राझ्या मुखे प्रविशन्तं चन्द्रं ददर्श खप्ने राजा । शुकनासोपि, विप्रेण केनचिन्मनोरमायाः क्रोडे निहितं पुण्ड रीकमेकमालोकयामास खप्ने । ततश्च विलासवल्याश्चन्द्रापीडः, मनोरमायाश्च पुण्डरीकाभिधानः सुतोऽभवत् । मिथः सौहार्दमापन्नौ द्वावप्येतौ कुमारी राज्ञा सकलविद्यासु पारग़ामितामुपनीतौ । ततो विद्यास्नातकोसौ चन्द्रापीडो राजाज्ञया बलाहकाभिधानेन सेनाध्यक्षेण समानीतमिन्द्रायुधना 
 
 
-मानं तुरगवरमारुह्य विद्यागृहादाजधानीमाययौ । जनकजनन्योः संदर्शनेनानन्दितः, मृगयां विधाय नगरमुपागतो जनन्या प्रेषितां पत्रलेखामवाप्य मुदितः शुकनासोपदेशेन प्रगुणीकृतः, तारापीडेन यौवराज्येभिषिक्तोसौ दिग्विजयाय प्रातिष्ठत । त्रिभिः संवत्सरैः सर्वा दिशो विदिशश्च विजित्य, हेमकूटवासिकिरातानामावासं सुवर्णपुरमधितिष्ठन्नेकाकी चन्द्रापीडः कदाचिदिन्द्रायुध मारुह्य मृगयार्थमटन् किनरयुगलानुसरणप्रसङ्गेन पञ्चदशयोजनानि - ययौ । किंनरमिथुने गिरिशिखरमारूढे, भृशमनुतप्तः श्रमेण तृषातुरो जलमन्विष्यन् विशाल-मनोरममच्छोदाख्यं सरः प्राप्तवान् । जलावगाहन-पानोत्तरं तत्तटे विश्राम्यन् , वीणाकणसहितं गानमाकर्ण्य तदनुसरन् , अतिगौरमनोरमामेकां कन्यका शिवालयगतां ददर्श । अथ प्राप्तातिथिसत्कारेण तेन पृष्टा सा निजतपोवृत्तमेवमाह स्म- . . ___"अरिष्टातनयो गन्धर्वराजो हंसः सोममयूखसंभवकुलजातां गौरी परिणीतवान् । तयो स्तनया महाश्वेतानाम्यहमतिक्रान्तशैशवां कदाचिदस्मिन् सरसि स्नातुमागत्य कुतोप्यलौकिकं , सौरभमाजिघ्रती तदनुसरणं च विदधती केनचिदन्येन कुमारेण सहितं मूर्तिमन्तमिव मन्मथं मुनि कुमारमेकमवलोक्य 'कोयं युवा, 'किनामकस्य तरोरियं सुरभिता मञ्जरी' इति तत्सहचरं कुमार मप्राक्षम् । स प्रत्युवाच-'महर्षेः श्वेतकेतोः सौन्दर्यमोहितायां-लक्ष्मीदेव्यामुत्पन्नः पुण्डरीकमध्ये जाततया पुण्डरीकनामा सोयं कुमारः । नन्दनवनदेवतया सादरमुपहृता सेयं पारिजातस्य मञ्जरी ।' निर्जितमारः स तु कुमार:-'कुतूहलिनि ! किं वा प्रश्नायासेन । यदि रुचिता तर्हि गृह्यतामियम्' इत्यभिधाय मञ्जरी तां मे करें कुर्वन् हस्तान्निपतितामक्षमालामपि न ज्ञातवान् । अहं तु मालामिमामगृह्णाम् । मन्मथविकारमिममालोक्य कुपितेन द्वितीयेन कुमारेण तिरस्क्रियमाणः कुमारोसौ (पुंडरीका) मामुपेत्य मालामयाचत् । अहं तु मुक्तामयं निजहारमेव कण्ठादुन्मुच्य तस्मै समर्प्य, तां च स्फटिकमयीं जपमालां कण्ठे वहन्ती जनन्या सह कृतस्नाना गृहमुपाग च्छम् । ततो मत्परिचारिका: तरलिका तेन कुमारेण कृतं मत्परिचयादिप्रश्नवृत्तं मह्यमावेद्य पत्र मेकमर्पितवती, यत्र चेयमार्याऽऽसील्लिखिता 
+मानं तुरगवरमारुह्य विद्यागृहादाजधानीमाययौ । जनकजनन्योः संदर्शनेनानन्दितः, मृगयां विधाय नगरमुपागतो जनन्या प्रेषितां पत्रलेखामवाप्य मुदितः शुकनासोपदेशेन प्रगुणीकृतः, तारापीडेन यौवराज्येभिषिक्तोसौ दिग्विजयाय प्रातिष्ठत । त्रिभिः संवत्सरैः सर्वा दिशो विदिशश्च विजित्य, हेमकूटवासिकिरातानामावासं सुवर्णपुरमधितिष्ठन्नेकाकी चन्द्रापीडः कदाचिदिन्द्रायुध मारुह्य मृगयार्थमटन् किनरयुगलानुसरणप्रसङ्गेन पञ्चदशयोजनानि - ययौ । किंनरमिथुने गिरिशिखरमारूढे, भृशमनुतप्तः श्रमेण तृषातुरो जलमन्विष्यन् विशाल-मनोरममच्छोदाख्यं सरः प्राप्तवान् । जलावगाहन-पानोत्तरं तत्तटे विश्राम्यन् , वीणाकणसहितं गानमाकर्ण्य तदनुसरन् , अतिगौरमनोरमामेकां कन्यका शिवालयगतां ददर्श । अथ प्राप्तातिथिसत्कारेण तेन पृष्टा सा निजतपोवृत्तमेवमाह स्म- . . ___"अरिष्टातनयो गन्धर्वराजो हंसः सोममयूखसंभवकुलजातां गौरी परिणीतवान् । तयो स्तनया महाश्वेतानाम्यहमतिक्रान्तशैशवां कदाचिदस्मिन् सरसि स्नातुमागत्य कुतोप्यलौकिकं , सौरभमाजिघ्रती तदनुसरणं च विदधती केनचिदन्येन कुमारेण सहितं मूर्तिमन्तमिव मन्मथं मुनि कुमारमेकमवलोक्य 'कोयं युवा, 'किनामकस्य तरोरियं सुरभिता मञ्जरी' इति तत्सहचरं कुमार मप्राक्षम् । स प्रत्युवाच-'महर्षेः श्वेतकेतोः सौन्दर्यमोहितायां-लक्ष्मीदेव्यामुत्पन्नः पुण्डरीकमध्ये जाततया पुण्डरीकनामा सोयं कुमारः । नन्दनवनदेवतया सादरमुपहृता सेयं पारिजातस्य मञ्जरी ।' निर्जितमारः स तु कुमारः-'कुतूहलिनि ! किं वा प्रश्नायासेन । यदि रुचिता तर्हि गृह्यतामियम्' इत्यभिधाय मञ्जरी तां मे करें कुर्वन् हस्तान्निपतितामक्षमालामपि न ज्ञातवान् । अहं तु मालामिमामगृह्णाम् । मन्मथविकारमिममालोक्य कुपितेन द्वितीयेन कुमारेण तिरस्क्रियमाणः कुमारोसौ (पुंडरीका) मामुपेत्य मालामयाचत् । अहं तु मुक्तामयं निजहारमेव कण्ठादुन्मुच्य तस्मै समर्प्य, तां च स्फटिकमयीं जपमालां कण्ठे वहन्ती जनन्या सह कृतस्नाना गृहमुपाग च्छम् । ततो मत्परिचारिकाः तरलिका तेन कुमारेण कृतं मत्परिचयादिप्रश्नवृत्तं मह्यमावेद्य पत्र मेकमर्पितवती, यत्र चेयमार्याऽऽसील्लिखिता 
 
 'दूर मुक्तालतया बिससितया विप्रलोभ्यमानो मे। 
 
@@ -664,7 +664,7 @@ __. मकरसंक्रान्ति: १९९६
 
 [कादम्बरीपूर्वभागः] 
 
-उत्तरकादम्बरी हेमकूटात्प्रत्यागता पत्रलेखा चन्द्रापीडविरहनिमित्तं कादम्बर्याः परमं वैकल्यमावेदयांबभूव । तेन हि कादम्बर्याः प्रेमणि संदिहानश्चन्द्रापीडो भृशमात्मानमुपालेभे । तदिनादारभ्य बहिरप्रकाश यन्नपि हृदये वियोगवह्निनाऽतितरामदूयत । एकदा मनोविनोदाय सायं नगराबहिर्भमन् बहु भिस्तुरगैः सह दूरादायान्तं केयूरकमकस्माद्ददर्श । नगरे आगत्य केयूरको रहसि कादम्बर्याः सुभृशमुपचितं मदनसंतापं तथाऽऽवेदयद् यथा शोकेन मूतिप्रतिबुद्धश्चन्द्रापीडः प्रत्यु वाच--'किमित्यहं नाहूतो देव्या । संप्रत्यहं प्राणपणेनापि तत्तापनिवृत्तये संनद्धः । केयूरकः शीघ्रगमनाय चन्द्रापीडं प्रार्थयत । निशि चन्द्रापीड:-'पित्रादीननिवेद्य गमनं नोचितम् । आज्ञाग्रहणे तु इदानीमेव दिग्विजयप्रत्यागताय मे तौ गमनानुमति. दास्यतो न वेति संदेह एव । वैशम्पायनोपि अच्छोदसरस्तटे त्यक्तः । कोऽधुना में सहायकः' इति नानाचिन्तामकरोत् ॥ 
+उत्तरकादम्बरी हेमकूटात्प्रत्यागता पत्रलेखा चन्द्रापीडविरहनिमित्तं कादम्बर्याः परमं वैकल्यमावेदयांबभूव । तेन हि कादम्बर्याः प्रेमणि संदिहानश्चन्द्रापीडो भृशमात्मानमुपालेभे । तदिनादारभ्य बहिरप्रकाश यन्नपि हृदये वियोगवह्निनाऽतितरामदूयत । एकदा मनोविनोदाय सायं नगराबहिर्भमन् बहु भिस्तुरगैः सह दूरादायान्तं केयूरकमकस्माद्ददर्श । नगरे आगत्य केयूरको रहसि कादम्बर्याः सुभृशमुपचितं मदनसंतापं तथाऽऽवेदयद् यथा शोकेन मूतिप्रतिबुद्धश्चन्द्रापीडः प्रत्यु वाच--'किमित्यहं नाहूतो देव्या । संप्रत्यहं प्राणपणेनापि तत्तापनिवृत्तये संनद्धः । केयूरकः शीघ्रगमनाय चन्द्रापीडं प्रार्थयत । निशि चन्द्रापीडः-'पित्रादीननिवेद्य गमनं नोचितम् । आज्ञाग्रहणे तु इदानीमेव दिग्विजयप्रत्यागताय मे तौ गमनानुमति. दास्यतो न वेति संदेह एव । वैशम्पायनोपि अच्छोदसरस्तटे त्यक्तः । कोऽधुना में सहायकः' इति नानाचिन्तामकरोत् ॥ 
 
 प्रातः सहसा शुश्राव 'दशपुरं यावत्परागतः स्कन्धावारः' इति । ततश्चात्र प्रत्यागतेन धैशम्पायनेन सह कादम्बरीमनुसरिष्यामीति हृदि संतुतोष चन्द्रापीडः । केयूरकस्तु 'यावद्वैशम्पा यनेन सह देवो हेमकूटाय प्रतिष्ठते ततः पूर्वं भवदागमननिबेदनाय विसर्जयतु मां देवः' इति गम नानुमतिं ययाचे । चन्द्रापीडस्तु खागमनप्रत्ययार्थ पत्रलेखामपि तेन सह पुरतो विससर्ज । 
 
@@ -712,11 +712,11 @@ __. मकरसंक्रान्ति: १९९६
 
 ## विषयानुक्रमणिका। 
 
-पूर्वभागे पृष्ठाका: विषया 
+पूर्वभागे पृष्ठाकाः विषया 
 
 पृष्ठाकाः मालाचरणम् 
 
-| तारापीड: ... 
+। तारापीडः ... 
 
 ... १२१-१२६ सुजनदुर्जनाख्यानम् 
 
@@ -724,7 +724,7 @@ __. मकरसंक्रान्ति: १९९६
 
 ... १२७ कविवंशवर्णनम् 
 
-राज्ञो भोगविलास: 
+राज्ञो भोगविलासः 
 
 ... १२९-१३२ शुद्रकवर्णनम् ... 
 
@@ -758,7 +758,7 @@ __. मकरसंक्रान्ति: १९९६
 
 सूतिकागृहवर्णनम् ... ... १५९-१६१ पम्पासरः । 
 
-४७-५० . | जातस्य कुमारस्य वर्णनम् १६३ शाल्मलीतरुः 
+४७-५० . । जातस्य कुमारस्य वर्णनम् १६३ शाल्मलीतरुः 
 
 ____५१-५२ शुकनासपुत्रजन्मोत्सवः 
 
@@ -858,7 +858,7 @@ DA
 
 विषयाः 
 
-पृष्ठाकाः चन्द्रापीडस्य दिग्विजययात्रा __... २३९-२५४ कादम्बर्याः प्रतिसंदेशः ... दिग्विजयः ... ... ... २५५ कादम्बरीभवनप्राप्तिः ... .. ३७९ किंनरमिथुनाप्राप्ती निर्वेदः ... २५७-२५९ | कुमारीपुरस्य वृत्तान्तः ... ३८१ সালু 
+पृष्ठाकाः चन्द्रापीडस्य दिग्विजययात्रा __... २३९-२५४ कादम्बर्याः प्रतिसंदेशः ... दिग्विजयः ... ... ... २५५ कादम्बरीभवनप्राप्तिः ... .. ३७९ किंनरमिथुनाप्राप्ती निर्वेदः ... २५७-२५९ । कुमारीपुरस्य वृत्तान्तः ... ३८१ সালু 
 
 .... २६१ . कुमारीपुरकोतुकानि अच्छोदसरः 
 
@@ -886,7 +886,7 @@ DA
 
 कादम्बरीप्रहितहारदर्शनम् ... ४१५ 'महाश्वेताया अवस्था ... ३०३-३०६ 
 
-| कादम्बरीप्रहितोपहारसमणम् ... ४१७४ १९ महाश्वेतादर्शने पुण्डरीकावस्था ... ३०७ 
+। कादम्बरीप्रहितोपहारसमणम् ... ४१७४ १९ महाश्वेतादर्शने पुण्डरीकावस्था ... ३०७ 
 
 सन्ध्यावर्णनम् ... .. ४२१ पुण्डरीकजन्मवृत्तान्तः ... ३०९-३११ 
 
@@ -914,17 +914,17 @@ DA
 
 
 
-पृष्ठाडाः मङ्गलाचरणम् . ... ... ४८३ तारापीडस्याज्ञापनम् ... ... ५८३ कथारम्भप्रस्तावना ... ... ४८७ . मातुरनुमतियाचनं यात्रासंविधानं च ५८५ पत्रलेखाद्वारा कादम्बर्याः संदेशः ... ४८७-४९४ | प्रस्थापनकालिकी मातुरुक्तिः ... ५८७. कादम्बयों वृत्तान्तश्रवणम् .... ४९५ पितु: शिक्षा ... 
+पृष्ठाडाः मङ्गलाचरणम् . ... ... ४८३ तारापीडस्याज्ञापनम् ... ... ५८३ कथारम्भप्रस्तावना ... ... ४८७ . मातुरनुमतियाचनं यात्रासंविधानं च ५८५ पत्रलेखाद्वारा कादम्बर्याः संदेशः ... ४८७-४९४ । प्रस्थापनकालिकी मातुरुक्तिः ... ५८७. कादम्बयों वृत्तान्तश्रवणम् .... ४९५ पितुः शिक्षा ... 
 
 ... ५८९ चन्द्रापीडस्यानुतापः ... ... ४९७-५०० विसर्जने पितुरुक्तिः ... ... ५९१ चन्द्रापीडस्य मनसि विचारः . . ... ५०१ 
 
 मार्गे गच्छतश्चन्द्रापीडस्य भावनाः ... ५९५-५९७ चन्द्रापीडस्य विरहावस्था. .. ... . ५५०३-१०६ मार्ग प्राट्रकालः ... ' ... ५९९ आगच्छतः केयूरकस्यावलोकनम् .... ५०७ प्रावृषा कुमारस्य वैकल्यम् ... ६०१ कादम्बरीदशानिवेदनम् . ... ५०९ परावर्तमानस्य मेघनादस्य दर्शनम् ६०३ कादम्बयों विरहावस्था ... ... ५११-५२० मेघनादसंदेशेन विषादः 
 
-विषादः ... ६०५ चन्द्रापीडस्य प्रतिवचनम् ... ५२१-५२४ | अच्छोदगमनम् ... . ... ६०७ केयूरकेण सह संलापः ... 
+विषादः ... ६०५ चन्द्रापीडस्य प्रतिवचनम् ... ५२१-५२४ । अच्छोदगमनम् ... . ... ६०७ केयूरकेण सह संलापः ... 
 
 महाश्वेताश्रमे गमनम् ..........६०९ यात्रार्थ चन्द्रापीडस्य विचारः ... ५२९ । तस्या वैशम्पायनवृत्तश्रवणम् वैशम्पायनस्यागमनश्रवणम् ..... ५३१ वैशम्पायनस्य महाश्वेताभिसारः ... ६१५ पत्रलेखया सह केयूरकस्याग्रतो बिसर्जनम्५३३ वैशम्पायनस तिरस्कारः ... ६१७ कादम्बर्यर्थ पत्रलेखायै संदेशः ... ५३५ । वैशम्पायनस्य मृत्युः, चन्द्रापीडस्य .. पत्रलेखाया अभिनन्दनं विसर्जनं च ५३७ । 
 
-हृदयस्फोटः... ... ६१८ चन्द्रापीडस्य परिणयप्रस्तावः ... ५३९. कादम्बर्यास्तत्रागमनम् ... ६२१ चन्द्रापीडस्योत्सुक्यम् ... ... ५४१. अनुमरणार्थ विलापः ... ... ६२३-६२६ अपररात्रे यात्राशसध्वनिः । ५४३ आकाशवाण्या कादम्बर्याः सान्त्वनम् ६२७ चन्द्रापीडस्य यात्रासमारोहः ... ५४५ कपिजलस्यागमनम् ... ....६२९ मार्ग प्रातःकाल: ........ ५४७. 
+हृदयस्फोटः... ... ६१८ चन्द्रापीडस्य परिणयप्रस्तावः ... ५३९. कादम्बर्यास्तत्रागमनम् ... ६२१ चन्द्रापीडस्योत्सुक्यम् ... ... ५४१. अनुमरणार्थ विलापः ... ... ६२३-६२६ अपररात्रे यात्राशसध्वनिः । ५४३ आकाशवाण्या कादम्बर्याः सान्त्वनम् ६२७ चन्द्रापीडस्य यात्रासमारोहः ... ५४५ कपिजलस्यागमनम् ... ....६२९ मार्ग प्रातःकालः ........ ५४७. 
 
 कपिजलस्य वृत्तम् ...... ६३१-६३३ स्कन्धावारदर्शनम् ..... 
 
@@ -940,7 +940,7 @@ DA
 
 ५५५--५५८ 
 
-| दूतानां कुमारदर्शनाग्रहः ... ६४३ वैशम्पायनस्यावस्थाश्रवणम् 
+। दूतानां कुमारदर्शनाग्रहः ... ६४३ वैशम्पायनस्यावस्थाश्रवणम् 
 
 दूतानां सान्त्वनम् ... चन्द्रापीडस्य चेतसि चिन्ता ५६.१ 
 
@@ -954,7 +954,7 @@ DA
 
 राज्ञा विलासवत्याः सान्लनम् ... ६५७ शुकनासस्य चन्द्रापीडप्रशंसा 
 
-सर्व वृत्तं श्रुखा राज्ञो मरणाध्यवसायः ६५९ वैशम्पायनतिरस्कारः ... ... ५७५ शुकनासस्य सान्त्वनम् ... ... ६६१-- तारापीडस्य शुकनासपरिबोधनम् ... ५७७ सपरिकरस्य राज्ञो गमनम् ... ६६५ चन्द्रापीडस्य यात्रानुमतियाचनम् ... ५७९--५८१ | अच्छोदतीरे मेघनादस्याभिगमनम् ... ६६५ 
+सर्व वृत्तं श्रुखा राज्ञो मरणाध्यवसायः ६५९ वैशम्पायनतिरस्कारः ... ... ५७५ शुकनासस्य सान्त्वनम् ... ... ६६१-- तारापीडस्य शुकनासपरिबोधनम् ... ५७७ सपरिकरस्य राज्ञो गमनम् ... ६६५ चन्द्रापीडस्य यात्रानुमतियाचनम् ... ५७९--५८१ । अच्छोदतीरे मेघनादस्याभिगमनम् ... ६६५ 
 
 । 
 
